# NeteaseOpenClass

./: README.md  build.gradle  gradle.properties  settings.gradle
IOC/: build.gradle
IOC/src/main/: AndroidManifest.xml
ImageCompress/: CMakeLists.txt  build.gradle
ImageCompress/src/main/java/com/sleticalboy/ic/: ImageActivity.kt  JNIHelper.java
ImageCompress/src/main/java/com/sleticalboy/ic/plugin/: IPlugin.kt  ProxyActivity.kt
ImageCompress/src/main/jni/: native-demo.c
ImageCompress/src/main/res/layout/: activity_image.xml
IoC/: build.gradle
IoC/src/main/: AndroidManifest.xml
LibGif/: CMakeLists.txt  build.gradle
LibGif/src/androidTest/java/com/binlee/libgif/: ExampleInstrumentedTest.kt
LibGif/src/main/: AndroidManifest.xml
LibGif/src/main/java/com/binlee/libgif/: MainActivity.kt
LibGif/src/main/res/drawable/: side_nav_bar.xml
LibGif/src/main/res/drawable-v21/: ic_menu_gallery.xml  ic_menu_manage.xml  ic_menu_send.xml  ic_menu_slideshow.xml
LibGif/src/main/res/layout/: activity_main.xml  app_bar_main.xml  content_main.xml  nav_header_main.xml
LibGif/src/main/res/menu/: activity_main_drawer.xml  main.xml
LibGif/src/main/res/values/: strings.xml
LibGif/src/test/java/com/binlee/libgif/: ExampleUnitTest.kt
LibLuban/: .gitignore  CMakeLists.txt  build.gradle
LibLuban/src/main/: AndroidManifest.xml
LiveDataBus/: build.gradle
Login/: build.gradle
Router/: build.gradle
Tinker/: build.gradle  multidex-config.txt
User/: build.gradle
Utils/: build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+140 files in other folders)
